--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Dustup - docs
-description: Dustup - docs
+title: Dustup help centre
+description: Dustup help centre
 
 theme: just-the-docs
 
@@ -19,3 +19,6 @@ callouts:
   tip:
     title: Tip
     color: blue
+
+# Set a path/url to a logo that will be displayed instead of the title
+logo: "/docs/images/dustup-logo.png"
