--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,4 @@ callouts:
     color: blue
 
 # Set a path/url to a logo that will be displayed instead of the title
-logo: "/docs/images/dustup-logo.png"
+logo: "/images/dustup-logo.png"
